# nl2sql-learn

./: .env  .gitignore  .pre-commit-config.yaml  project_structure  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: postgresql.py  schema_store.py  vectorstore.py
app/models/: request.py  response.py
app/resources/prompts/: constraint_analysis.md  field_extraction.md  sql_generation.md  table_extraction.md
app/resources/schemas/ddl/: users.md
app/resources/schemas/descriptions/: users.md
app/services/: constraint_service.py  context_service.py  entity_service.py  factory.py  intent_service.py  llm_service.py  openai_service.py  prompt_service.py  sql_generation.py
app/tests/: test_openai_service.py
app/utils/: __init__.py  helpers.py
config/: business_rules.json
